name:                him
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/romac/him#readme
license:             BSD3
license-file:        LICENSE
author:              Romain Ruetschi
maintainer:          romain.ruetschi@gmail.com
copyright:           2015 Romain Ruetschi
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable him
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , him
                     , unix
                     , ansi-terminal
                     , yi-rope
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/romac/him
